<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/bg">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        tools:ignore="MissingConstraints" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        tools:ignore="MissingConstraints"
        app:cardBackgroundColor="@color/light_gray_blue">


        <TextView
            android:id="@+id/question"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/question"
            android:textSize="30sp"
            android:fontFamily="@font/winterthur_condensed"
            android:textColor="@color/dark_green_blue"
            android:layout_margin="16dp"/>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btn_yes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="60dp"
        android:textAllCaps="false"
        android:text="@string/ya"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardview"
        android:backgroundTint="@color/light_gray_blue"
        android:textColor="@color/dark_green_blue"
        android:fontFamily="@font/winterthur_condensed"
        android:textStyle="bold"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_yes"
        app:layout_constraintTop_toBottomOf="@+id/cardview"
        android:text="@string/tidak"
        android:id="@+id/btn_no"
        android:textAllCaps="false"
        android:backgroundTint="@color/light_gray_blue"
        android:textColor="@color/dark_green_blue"
        android:fontFamily="@font/winterthur_condensed"
        android:textStyle="bold"/>

</androidx.constraintlayout.widget.ConstraintLayout>