<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cv_items"
    android:orientation="vertical"
    app:cardCornerRadius="4dp"
    app:cardElevation="4dp"
    app:cardMaxElevation="4dp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/item_containers"
        android:background="@color/light_gray_blue">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@color/azure"
            android:id="@+id/img_items"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_namaproduk"
            android:text="@string/nama_produk"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="16dp"
            android:ellipsize="end"
            android:gravity="start"
            android:maxLines="2"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_items"
            app:layout_constraintTop_toTopOf="parent"
            android:fontFamily="@font/winterthur_condensed"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/komposisi"
            android:text="@string/komposisiii"
            android:fontFamily="@font/winterthur_condensed"
            tools:ignore="MissingConstraints"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_namaproduk"
            app:layout_constraintStart_toEndOf="@+id/img_items"
            android:layout_marginStart="10dp"
            android:textSize="15sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv_komposisi"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:ellipsize="end"
            android:fontFamily="@font/winterthur_condensed"
            android:gravity="start"
            android:maxLines="4"
            android:text="@string/komposisi"
            android:textSize="20sp"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tv_namaproduk"
            app:layout_constraintStart_toEndOf="@+id/img_items"
            app:layout_constraintTop_toBottomOf="@+id/komposisi" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>