<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailProdukActivity"
    android:background="@drawable/bg">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_margin="16dp"
            android:layout_marginEnd="8dp"
            android:layout_centerHorizontal="true"
            android:id="@+id/ivPosterDetailProduct"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:padding="10dp"/>

        <TextView
            android:layout_below="@id/ivPosterDetailProduct"
            tools:text="Wardah Aloe Hydramild Facial Wash"
            android:layout_centerHorizontal="true"
            android:textSize="25sp"
            android:layout_margin="16dp"
            android:id="@+id/tvNameDetailProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/coffeebreak"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/komposisi"
            android:layout_below="@+id/tvNameDetailProduct"
            android:text="@string/komposisiii"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:fontFamily="@font/winterthur_condensed"
            android:textStyle="bold"/>

        <TextView
            android:layout_below="@id/komposisi"
            tools:text="Aqua, Acrylates Copolymer, Cocamidopropyl Betaine, Propylene Glycol, Glycerin"
            android:layout_centerHorizontal="true"
            android:textSize="20sp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:id="@+id/tvCompositionDetailProduct"
            android:fontFamily="@font/winterthur_condensed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_below="@id/tvCompositionDetailProduct"
            android:text="@string/how_to_use"
            android:layout_centerHorizontal="true"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="25dp"
            android:id="@+id/tvHowToUseDetailProduct"
            android:fontFamily="@font/winterthur_condensed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_below="@id/tvHowToUseDetailProduct"
            android:text="@string/_1_basahi_wajah_dengan_air_hangat_tarik_rambut_anda_ke_belakang_dan_basahi_kulit_anda_dengan_banyak_air_hangat_n_2_gunakan_pembersih_pilihan_anda_gunakan_pembersih_berukuran_sepeser_pun_yang_sesuai_dengan_jenis_kulit_anda_n_3_eksfoliasi_kulit_anda_dengan_lembut_n_4_bilas_dan_tepuk_tepuk_hingga_kering_n_5_oleskan_toner_untuk_tampilan_yang_halus_n_6_akhiri_dengan_pelembab_n"
            android:fontFamily="@font/winterthur_condensed"
            android:layout_centerHorizontal="true"
            android:textSize="20sp"
            android:layout_margin="16dp"
            android:id="@+id/tvStepToUseDetailProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </RelativeLayout>

</androidx.core.widget.NestedScrollView>